--- a/Frontend/starsync/src/app/login/login.component.html
+++ b/Frontend/starsync/src/app/login/login.component.html
@@ -16,7 +16,7 @@
           
 
             <div> 
-              <button  type="submit" mat-raised-button color="primary">Sign Up</button>
+              <button  type="submit" mat-raised-button color="primary">Login</button>
             </div>
           </form>
           
