--- a/Frontend/starsync/src/app/signup/signup.component.css
+++ b/Frontend/starsync/src/app/signup/signup.component.css
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 5rem;
 }
 .signup-input{
     width: 300px;
