--- a/Frontend/starsync/src/app/admin/admin.component.html
+++ b/Frontend/starsync/src/app/admin/admin.component.html
@@ -5,6 +5,12 @@
             <div class="sub-container" *ngIf="tabName === 'AddProject'">
                 <app-new-project></app-new-project>
             </div>
+            <div class="sub-container" *ngIf="tabName === 'AllProject'">
+                <app-all-projects></app-all-projects>
+            </div>
+            <div class="sub-container" *ngIf="tabName === 'Dashboard'">
+                <app-dashboard></app-dashboard>
+            </div>
         </div>
    </div>
    
