--- a/Frontend/starsync/src/app/header/header.component.css
+++ b/Frontend/starsync/src/app/header/header.component.css
@@ -1,7 +1,7 @@
 header {
-    background-color: #673ab7;
+    background-color: #260065;
     color: #fff;
-    padding: 5px;
+    padding: 0px 11px;
     text-align: right;
 }
 .header-logo {
