--- a/Frontend/starsync/src/app/header/header.component.html
+++ b/Frontend/starsync/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="header">
     <nav>
        <div>
-         <span class="header-logo">Starysync</span>
+         <span class="header-logo">Starsync</span>
        </div>
      <div>
         <ul>
