--- a/Frontend/starsync/src/app/sidebar/sidebar.component.html
+++ b/Frontend/starsync/src/app/sidebar/sidebar.component.html
@@ -1,35 +1,34 @@
 <mat-drawer-container class="sidebar-container">
+    <router-outlet></router-outlet>
     <mat-drawer mode="side" opened class="sidebar">
         <div *ngIf="currentRole=='Admin'" class="sidebar">
             <ul>
                 <div class="side-nav">
-                    <li><a routerLink="/admin">Home</a></li>
+                  <li><a [routerLink]="'/admin/dashboard'">Dashboard</a></li>
                 </div>
                 <div class="side-nav">
-                    <li><a routerLink="project/new">New Projects</a></li>
+                  <li><a [routerLink]="'/admin/project/new'">New Projects</a></li>
                 </div>
                 <div class="side-nav">
-                    <li><a routerLink="/about">Profile</a></li>
+                  <li><a [routerLink]="'/admin/projects'">Show All Projects</a></li>
                 </div>
                 <div class="side-nav">
-                    <li><a routerLink="/about">All Project Managers</a></li>
+                  <li><a [routerLink]="'/admin/managers'">All Project Managers</a></li>
                 </div>
                 <div class="side-nav">
-                    <li><a routerLink="/contact">All Team Memebers</a></li>
+                  <li><a [routerLink]="'/admin/teams'">All Team Members</a></li>
                 </div>
-            </ul>
+              </ul>
+              
         </div>
         <div *ngIf="currentRole=='Project Manager'" class="sidebar">
             <ul>
-                <div class="side-nav">
-                    <li><a routerLink="/home">Profile</a></li>
-                </div>
-                <div class="side-nav">
-                    <li><a routerLink="/about">Assigned Projects</a></li>
-                </div>
-                <div class="side-nav">
-                    <li><a routerLink="/contact">All Team Members</a></li>
-                </div>
+              <div class="side-nav">
+                <li><a [routerLink]="'/manager/projects'">Dashboard</a></li>
+              </div>
+              <div class="side-nav">
+                <li><a [routerLink]="'/manager/team'">Team Members</a></li>
+              </div>
             </ul>
         </div>
         <div *ngIf="currentRole=='Team Memeber'" class="sidebar">
