--- a/Frontend/starsync/src/app/new-project/new-project.component.css
+++ b/Frontend/starsync/src/app/new-project/new-project.component.css
@@ -1,4 +1,9 @@
 .new-project-input {
     width: 100%;
-    margin-top: 10px;
+    margin-top: 5px;
+}
+.new-project {
+    background: white;
+    padding: 25px 63px;
+    text-align: center;
 }
