team dashboard updated

--- a/Frontend/starsync/src/app/header/header.component.html
+++ b/Frontend/starsync/src/app/header/header.component.html
@@ -1,7 +1,8 @@
 <header class="header">
     <nav>
-       <div>
-         <span class="header-logo">Starsync</span>
+       <div class="header-logo">
+         <img class="header-logo-1" src="../../assets/logo.png" alt="logo">
+         <span>StarSync</span>
        </div>
      <div>
         <ul>
