--- a/Frontend/starsync/src/app/homepage/homepage.component.html
+++ b/Frontend/starsync/src/app/homepage/homepage.component.html
@@ -1,1 +1,8 @@
-<h2>Welcome to Startsync</h2>
+<section class="hero">
+    <div class="hero-content">
+        <h1>Welcome to Starsync</h1>
+        <p>Your all-in-one solution for efficient project management.</p>
+        <a  routerLink="/login" class="cta-button">Login</a>
+        <a  routerLink="/signup" class="cta-button">Signup</a>
+    </div>
+</section>
