--- a/Frontend/starsync/src/app/manager-projects/manager-projects.component.html
+++ b/Frontend/starsync/src/app/manager-projects/manager-projects.component.html
@@ -1,10 +1,14 @@
 <div class="card-container">
+  <div *ngIf="allProjects.length==0">
+    <h2 ><b>It looks like no Project have been assigned to you.</b></h2>
+   </div>
     <mat-card *ngFor="let p of allProjects" >
       <mat-card-content class="show-project-field" style="text-align: center;"><h2>{{p.name}}</h2></mat-card-content>
       <mat-card-content class="show-project-field"><b style="font-size: 16px;">Status: </b>{{p.project_status}}</mat-card-content>
       <mat-card-content class="show-project-field"><b style="font-size: 16px;">Description: </b>{{p.description}}</mat-card-content>
       <mat-card-content class="show-project-field"><b style="font-size: 16px;">Start Date: </b>{{p.start_date}}</mat-card-content>
       <mat-card-content class="show-project-field"><b style="font-size: 16px;">End Date: </b>{{p.start_date}}</mat-card-content>
+      <mat-card-content><button [routerLink]="['/manager/projects', p.id]" type="submit" mat-raised-button color="primary">View<mat-icon>open_in_new</mat-icon></button></mat-card-content>
     </mat-card>
   </div>
     
